# k210-pac

./: Cargo.toml  build.rs  device.x  generate.ps1  generate.sh  k210.svd
src/: lib.rs
