[package]
name = "k210-pac"
version = "0.3.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for K210 SoC"
repository = "https://github.com/riscv-rust/k210-pac"
keywords = ["riscv", "k210", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "1"
riscv = "0.10"
riscv-rt = { version = "0.11", optional = true }
vcell = "0.1"
critical-section = { version = "1.1", optional = true }

[features]
rt = ["riscv-rt"]
critical = ["critical-section"]
